--- a/ProgramacionWEB/Index.html
+++ b/ProgramacionWEB/Index.html
@@ -4,15 +4,21 @@
 	<title>Mi primera web</title>
 </head>
 <body>
-	<h1>Mi bibliografia</h1><!--Esto es el titulo de una pagina-->
+	<head>
+		<link rel="stylesheet" type="text/css" href="estilos/styles.css"
+	</head>
+	<div>
+	<h1>Aplicaciones Moviles </h1>
+	<p id="colorletra">Probando estilos</p><!--Esto es el titulo de una pagina-->
+	</div>
 	<h2>Bienvenidos a mi web</h2><!--Esto es un segundo titulo-->
-	<p>
+	<p >
 		Hola, soy Eydrel Méndez soy nacido en  Sonora y  vivo en cd obregon , tengo 22 años y quisiera aprender a programar paginas web.<br/><!--Sirve como "ENTER"--> 
 		<p> <!--Sirve para lineas de texto-->
 			mas que un hobbie me gusta y me gustaria aprender todo lo que conlleva la programacion, actualmente estudio una carrera sobre ello, " Ingenieria en Software", actualmento programo en java.
 		</p>
 		
-		<img src="Imagenes/144675278_3610534335731821_8837364069595802393_o.jpg" title="Eydrel Méndez" width="255px" /> 
+		<img src="Imagenes/144675278_3610534335731821_8837364069595802393_o.jpg" title="Eydrel Méndez" width="255px"/> 
 		<hr/>
 
 	</p>
